# StravaApp

./: .dockerignore  .env.j2  .env.template  .env.test  .gitignore  Dockerfile  README.md  ansible-playbook.yml  context.drawio  docker-compose-dev.yml  docker-compose-prod.yml  inventory  pyproject.toml  start.sh  todoapp.service
.docker/: config.json
.github/workflows/: python-app.yml
documentation/: component.drawio  container.drawio
test/: e2e_test.py  integration_test.py  view_model_test.py
test/e2e_tests/: e2e_test.py
test/tests/: integration_test.py  view_model_test.py
todo_app/: activities_view_model.py  app.py  auth.py  flask_config.py  items_view_model.py  start.py  user_view_model.py  users_view_model.py  view_model.py
todo_app/auth/: anonymous_user.py  authentication.py  authorization.py  user.py  user_role.py
todo_app/data/: activity.py  db_items.py  db_users.py  item.py  list.py  running_calculator.py  session_items.py  status.py  strava_client.py  strava_user.py  trello_items.py
todo_app/templates/: activities.html  index.html  layout.html  plot.html  users.html
