[tool.poetry]
name = "strava-app"
version = "0.1.0"
description = "A simple Strava app"
authors = []

[tool.poetry.dependencies]
python = "3.11"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"
markupsafe ="2.0.1"
pymongo = "^4.2.0"
mongomock = "^4.1.2"
Flask-Login = "^0.6.2"
mpld3 = "^0.5.8"
scipy = "^1.9.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
selenium = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
